fixing overflow bugs

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -71,6 +71,7 @@ nav {
 
 .nav-item {
     max-width: 100%;
+    overflow-x: hidden;
     display: flex;
     gap: 40px;
     font-weight: 700;
@@ -227,6 +228,7 @@ Contacts
         transform: translate(-50%); 
         z-index: 99999;
         padding: 8px 20px;
+        
     }
     
     .contacts-item {
@@ -318,7 +320,7 @@ INTRO
     background-color: var(--bg-color);
     position: absolute;
     animation: cursor 0.6s infinite, typing 10s steps(14) infinite;
-    width: calc(100% + 8px);
+    width: 100%;
     height: 100%;
     border-left: 3px solid var(--bg-color);
     right: -8px;
@@ -565,7 +567,7 @@ ABOUT
 
 @media screen and (max-width: 768px) {
     .about-item {
-        margin: 20px 10px;
+        margin: 20px 0px;
         padding: 15px 8px;
     }
     
@@ -621,7 +623,7 @@ ABOUT
         height: 12px;
         max-width: 250px;
         position: relative;
-        padding-left: 6px;
+        margin-left: 6px;
     }
 
     .bar {
@@ -637,7 +639,7 @@ ABOUT
 }
 @media screen and (max-width: 360px) {
     .about-item {
-        margin: 20px 10px;
+        margin: 20px 0px;
         padding: 10px 5px;
     }
     
@@ -693,7 +695,7 @@ ABOUT
         height: 10px;
         max-width: 180px;
         position: relative; 
-        padding-left: 6px;
+        margin-left: 6px;
     }
     
     .bar {
@@ -826,7 +828,7 @@ ACADEMIC
 }
 
 
-/* General experience section */
+/* Experience */
 .experience {
     margin: 50px 20px; 
     display: flex;
@@ -835,7 +837,6 @@ ACADEMIC
     justify-content: center;
     width: 100%;
     box-sizing: border-box;
-    width: calc(100% - 40px);
 }
 
 .experience h1 {
@@ -851,6 +852,9 @@ ACADEMIC
     align-items: center; 
     width: 100%; 
     margin: 1rem 0;
+    flex-grow: 1;
+    max-width: 100%;
+    flex-wrap: wrap;
 }
 
 .animate-on-scroll {
@@ -862,6 +866,7 @@ ACADEMIC
     justify-content: flex-start; 
     width: 100%; 
     gap: 20px;
+    max-width: 100%;
 }
 
 .experience-item-child img {
@@ -872,10 +877,6 @@ ACADEMIC
     position: relative;
     z-index: 99;
     transition: transform 0.3s ease, filter 0.3s ease; 
-}
-
-.experience-item {
-    flex-grow: 1;
 }
 
 .blur {
@@ -906,14 +907,6 @@ ACADEMIC
     letter-spacing: 4px;
     color: var(--primary-color);
     text-align: left;
-}
-
-.experience-item-child-text-right h2 {
-    font-size: 1.5rem;
-    font-weight: 800;
-    letter-spacing: 4px;
-    color: var(--primary-color);
-    text-align: left; 
 }
 
 .experience-item-child-text p {
